# NextAuthBackend

./: .gitignore  DockerFile  Dockerfile  README.md  config.py  main.py  pyproject.toml  send_email.py
app/api/routers/: login.py  register.py  user.py  users.py
app/api/routers/login/: model.py  router.py
app/api/routers/register/: model.py  router.py
app/api/routers/users/: router.py
app/background_tasks/: task_scheduler.py
app/background_tasks/tasks/: dopu.py  dou.py
app/db/: database.py  schemas.py
app/db/confirmeduser/: crud.py  model.py
app/db/loginuser/: crud.py  model.py
app/db/pendinguser/: crud.py  model.py
app/utils/: asyncemail.py  handle_existing.py
db/: users.db
